--- a/tutorial-app/app/tutorial.html
+++ b/tutorial-app/app/tutorial.html
@@ -171,21 +171,36 @@ When building the model, try plugging in a <code>y</code> (outcome) variable tha
 <div id="section-interpretation-of-the-output" class="section level2">
 <h2>Interpretation of the output</h2>
 <p>Using the <code>summary()</code> function you viewed the details of the logistic regression model. Now how to interpret what you see?</p>
-<p><img src="images/my_summary.JPG" /><!-- --></p>
+<p><img src="images/my_summary.JPG" width="442" /></p>
 <div id="section-call" class="section level3">
 <h3>Call</h3>
-<p><img src="images/my_summary_call.jpg" /><!-- --></p>
+<p><img src="images/my_summary_call.jpg" width="442" /></p>
 <p>The first line of the summary is simply showing you the original call to the <code>glm()</code> function.</p>
 </div>
 <div id="section-deviance-residuals" class="section level3">
 <h3>Deviance residuals</h3>
-<p><img src="images/my_summary_devres.jpg" /><!-- --></p>
+<p><img src="images/my_summary_devres.jpg" width="442" /></p>
 <p>The next bit gives you a summary of the deviance residuals. In logistic regression the deviance residuals are not as useful and for the purpose of this tutorial we won’t go into detail about how to calculate them. However, you should look out for properties similar to regular residuals. That is, ideally they should be centered closely to 0 and roughly symmetrical.</p>
 </div>
 <div id="section-coefficients" class="section level3">
 <h3>Coefficients</h3>
-<p><img src="images/my_summary_coef.jpg" /><!-- --></p>
-<p>In this section we can see the coefficient estimates (coefficients or our “betas” in the model if you’d imagine the equation), including the intercept, the standard errors of the coeffiecients, z-values (which are basically values of the estimates divided by the standard errors), and lastly p-values telling us how statistically significant each of your predictors is (in our case our one predictor is significant).</p>
+<p><img src="images/my_summary_coef.jpg" width="442" /></p>
+<p>In this section we can see the coefficient estimates (coefficients - or our “betas” in the model if you’d imagine the equation), including the intercept, the standard errors of the coeffiecients, z-values (which are basically values of the estimates divided by the standard errors), and lastly p-values telling us how statistically significant each of your predictors is (in our case our one predictor is significant). We will relate back to this later.</p>
+</div>
+<div id="section-dispersion-parameter" class="section level3">
+<h3>Dispersion parameter</h3>
+<p><img src="images/my_summary_disp.jpg" width="442" /></p>
+<p><em>You will probably ignore this</em> Unlike in linear regression where we estimate both mean and variance, in logistic regression we estimate the mean of the data and the variance is derived from the mean. There is then a chance that the variance could be underestimated. If that’s the case, it can be changed from the default in <code>summary()</code>.</p>
+</div>
+<div id="section-null-and-residual-deviance" class="section level3">
+<h3>Null and residual deviance</h3>
+<p><img src="images/my_summary_devi.jpg" width="442" /></p>
+<p><em>You will probably ignore this</em> These can be used to compare models, calculate R^2 and the oeverall p-value.</p>
+</div>
+<div id="section-aic-score" class="section level3">
+<h3>AIC score</h3>
+<p><img src="images/my_summary_aic.jpg" width="442" /></p>
+<p>The Akaike Information Criterion is useful for “apple to apple” comparison, meaning comparing models based on the same data (the lower AIC suggests the better model). The number on its own is not very useful. Note: The AIC is basically the residual deviance adjusted for the number of parameteres in the model.</p>
 </div>
 </div>
 <div id="section-questions" class="section level2">
